--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -31,3 +31,12 @@ p {
   max-width: 1024px;
   margin: 0 auto;
 }
+
+button {
+  border: none;
+  font-size: 30px;
+  background-color: transparent;
+  width: 100%;
+  text-align: right;
+  cursor: pointer;
+}
